# percolator

./: CLAUDE.md  CMakeLists.txt  CPack.txt  CommonCMake.txt  Dockerfile
.github/workflows/: build.yml  container.yaml  sync-docs.yml  triggered_build.yml
admin/builders/: _urls_and_file_names_.bat  _urls_and_file_names_.sh  actionsw64_build.bat  centos64_build.sh  fedora64_build.sh  mingw32_build.sh  mingw64_build.sh  nativew32_build.bat  nativew64_build.bat  osx64_build.sh  ubuntu64_build.sh
data/system_tests/percolator/: CMakeLists.txt  SystemTest_Percolator_Correctness.py.cmake
doc/: generate_interface_doc.py
docs/: qvalue_convex_pep.md
src/: CMakeLists.txt  Caller.cpp  Caller.h  CompositionSorter.cpp  CrossValidation.cpp  DataSet.cpp  FidoInterface.cpp  Globals.cpp  Globals.h.cmake  ISplineTRRRegressor.cpp  ISplineTRRRegressor.h  IsotonicPEP.cpp  IsotonicPEP.h  MonotoneRegressor.cpp  MonotoneRegressor.h  PAVARegressor.h  PSMDescription.cpp  PSMDescription.h  PickedProteinInterface.cpp  PickedProteinInterface.h  PosteriorEstimator.cpp  ProteinProbEstimator.cpp  ProteinProbEstimator.h  Scores.cpp  Scores.h  Set.cpp  SetHandler.cpp  SetHandler.h  TabFileValidator.cpp  XMLInterface.cpp
src/fido/: BasicBigraph.cpp
src/picked_protein/: PickedProteinCaller.cpp
tests/integration_tests/percolator/: IntegrationTest_Percolator_Speed.py  IntegrationTest_Percolator_SpeedGraph.py  IntegrationTest_Percolator_SpeedGraphData.py
tests/unit_tests/percolator/: CMakeLists.txt  UnitTest_Percolator_InferPep.cpp  UnitTest_Percolator_IsplineRegression.cpp  UnitTest_Percolator_Scores.cpp
